[package]
name = "sol-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-sdk = "2.0"
solana-client = "2.0"
spl-token = "6.0.0"
spl-associated-token-account = "4.0.0"

dotenv = "0.15"
anyhow = "1"

bip39 = { version = "2.0.0", features = ["rand"] }
tokio = {version = "1", features = ["full"]}

[dev-dependencies]
solana-program-test = "2.0"


[features]
test-bpf = []

[lib]
crate-type = ["cdylib", "lib"]
