[package]
name = "sol-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-sdk = "2.1"
solana-client = "2.1"
spl-token = "7.0.0"
spl-associated-token-account = "6.0.0"

dotenv = "0.15"
eyre = "0.6.12"
tokio = {version = "1", features = ["full"]}

[dev-dependencies]
solana-program-test = "2.0"

[features]
test-bpf = []

[lib]
crate-type = ["cdylib", "lib"]
